animate modals, fix background, fix jump body after opening calculator

--- a/src/scss/components/calculator.scss
+++ b/src/scss/components/calculator.scss
@@ -1,7 +1,7 @@
 .b-calculator {
   position: fixed;
-  left: 0;
-  top: 0;
+  // left: 0;
+  // top: 0;
   width: 100%;
   z-index: 100;
   padding: 180px;
@@ -11,6 +11,7 @@
   z-index: 99999;
   background-size: cover;
   background-repeat: no-repeat;
+  transition: all .3s;
   
   &::-webkit-scrollbar {
     width: 0;
