--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -23,9 +23,9 @@ cite {
 }
 
 .b-fixed {
-  position: fixed;
-  left: 0;
-  top: 0;
+  // position: fixed;
+  // left: 0;
+  // top: 0;
   width: calc(100% - 17px);
   height: 100vh;
   overflow: hidden;
