--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -14,7 +14,7 @@
     background-repeat: no-repeat;
     background-position: center bottom;
     background-image: var(--background-pc);
-    z-index: -1;
+    // z-index: 1;
 
     @media(max-width:1100px) {
       & {
